[package]
name = "salesforce_streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.11.10", features = ["blocking"]}
openssl = "0.10.40"

[dev-dependencies]
httpmock = "0.6"